Fixed some alignments between media queries

--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -114,9 +114,7 @@ h3 {
 
 h4 {
   @include fontText(18px, bold, $color-black);
-
-  @include textEllipsis;
-
+  @include textEllipsis();
   margin: 0;
   margin-bottom: 5px;
 }
@@ -184,6 +182,7 @@ figure {
   top: 300px;
 
   width: 100%;
+  min-width: 360px;
 
   display: flex;
   flex-flow: row nowrap;
@@ -194,7 +193,7 @@ figure {
 
   border-radius: 40px 40px 0 0;
 
-  padding: 0 20px 0 20px;
+  padding: 0 34px 0 20px;
 
   i {
     font-size: 25px;
@@ -226,8 +225,11 @@ figure {
 }
 
 .dish-content {
+  min-width: 0;
+
   p {
-    width: max-content;
+    @include textEllipsis();
+
     margin: 0;
 
     color: black;
@@ -319,7 +321,7 @@ footer {
   .restaurant-header {
     justify-content: space-between;
 
-    padding: 0 20px 0 20px;
+    padding: 0 34px 0 20px;
   }
 }
 
